// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecordSelection > should match snapshot on not-loading error regardless of savedTypeId and recordIds 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 16px;
}

<div
  class="c0"
>
  목록을 불러오는 중 오류가 발생했습니다.
</div>
`;

exports[`RecordSelection > should match snapshot while loading regardless of savedTypeId, recordIds, and isError 1`] = `
.c2 {
  overflow: hidden;
  position: relative;
  width: 300px;
  height: 200px;
  border-radius: 16px;
  background: #e2e2e2;
}

.c2::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to right, #e2e2e2, #b6b6b6, #e2e2e2);
  animation: loading 1000ms ease-in-out infinite;
}

.c3 {
  overflow: hidden;
  position: relative;
  width: 300px;
  height: 20px;
  border-radius: 10px;
  background: #e2e2e2;
}

.c3::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to right, #e2e2e2, #b6b6b6, #e2e2e2);
  animation: loading 1000ms ease-in-out infinite;
}

.c0 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
  row-gap: 8px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    />
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    />
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    />
  </div>
</div>
`;

exports[`RecordSelection > should match snapshot with empty recordIds on not-loading and not-error 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 16px;
}

<div
  class="c0"
>
  현재 등록된 기록이 없습니다.
</div>
`;

exports[`RecordSelection > should match snapshot with non-empty recordIds on not-loading and not-error 1`] = `
.c3 {
  width: 300px;
  height: 240px;
  display: grid;
  grid-template-rows: 200px 40px;
  background-color: var(--primary-color);
  border-radius: 16px;
}

.c3:hover {
  background-color: var(--hovering-color);
}

.c4 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.c5 {
  height: 100%;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
  padding: 0px 16px;
  justify-content: center;
  align-items: flex-start;
}

.c6 {
  color: #ffffff;
  font-size: 16px;
  font-weight: 600;
}

.c0 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 16px;
}

.c1 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 16px;
}

.c2 {
  color: unset;
  text-decoration: none;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <a
      class="c2"
      href="/2023-10-28"
    >
      <div
        class="c3"
      >
        <img
          alt="2023년 10월 28일 기록"
          class="c4"
          src="https://read-only-api-endpoints-kuman514.vercel.app/yso-shmup-records/records/kuman514/images/2023-10-28_thumbnail.jpg"
        />
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            2023년 10월 28일 기록
          </span>
        </div>
      </div>
    </a>
    <a
      class="c2"
      href="/2023-05-14"
    >
      <div
        class="c3"
      >
        <img
          alt="2023년 5월 14일 기록"
          class="c4"
          src="https://read-only-api-endpoints-kuman514.vercel.app/yso-shmup-records/records/kuman514/images/2023-05-14_thumbnail.jpg"
        />
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            2023년 5월 14일 기록
          </span>
        </div>
      </div>
    </a>
    <a
      class="c2"
      href="/2022-11-21"
    >
      <div
        class="c3"
      >
        <img
          alt="2022년 11월 21일 기록"
          class="c4"
          src="https://read-only-api-endpoints-kuman514.vercel.app/yso-shmup-records/records/kuman514/images/2022-11-21_thumbnail.jpg"
        />
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            2022년 11월 21일 기록
          </span>
        </div>
      </div>
    </a>
  </div>
</div>
`;
